Changes in 0.61.7:
  * Several bugs related to updating two troves with the same name have been 
    fixed - including branch affinity, flavor affinity, correct handling of 
    already updated troves, and correct handling of empty flavors.
  * "conary emerge" as root (or as a user than can apply the changeset
    produced by the build) did not install anything but the toplevel
    package.  This bug has been fixed.
  * No longer hide descriptive TroveNotFound errors behind a generic 
    NoNewTroves wrapper
  * Group recipes can now request that dependencies be resolved and
    added to the group at cook time.  To automatically add required
    troves to a group add "autoResolve = True" to the recipe class.
    Optionally "autoResolveLabelPath" can be set to a list of labels
    to use during dependency resolution.
  * Locally stored rollbacks couldn't handle files changing types. As
    part of the fix, the generic file diff code is now used when creating
    changesets instead of having a special-case wrapper around it
    (fileChangeSet())
  * The commitaction script and the changemail module did not necessarily
    show the full trailing version for branches and shadows.  (For example,
    /conary.rpath.com@rpl:devel/4.1.25-18/db41/19 showed up as "19"
    instead of "4.1.25-19".)
  * Add a --deps option for conary q.  Make that and conary rq --deps
    recurse over collections.
  * Warn about missing buildRequires entries both for soname dependencies
    and for TagSpecs applied via tag description files.
  * A bug in updating groups that switch the byDefault setting of troves
    has been fixed
  * add an updateThreshold config option to control the number of troves to
    include in a download
  * A major bug affecting update order for synchronous libraries has been
    fixed.
  * The r.Ownership(), r.UtilizeUser(), and r.UtilizeGroup() now generate
    appropriate dependencies on info-* packages.

Changes in 0.61.6: